--- a/bjs/07_Number_and_string/index.html
+++ b/bjs/07_Number_and_string/index.html
@@ -15,10 +15,69 @@
             <div class="form-group">
                 <div class="card" id="calc">
                     <div class="card-body">
-                        <input class="form-control input-window" id="inputWindow" value="">
+                        <input class="form-control input-window" id="inputWindow" value="0">
                         <div class="row no-gutters">
                             <div class="col">
-                                <button class="btn btn-outline-danger form-control" id="btn_clr">C</button>
+                                <button class="btn btn-outline-danger form-control" id="btn_clr" data-index="c">C</button>
+                            </div>
+                        </div>
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="1">1</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="2">2</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="3">3</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="sum">+</button>
+                            </div>
+                        </div>
+                        
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="4">4</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="5">5</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="6">6</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="diff">-</button>
+                            </div>
+                        </div>
+
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="7">7</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="8">8</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="9">9</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="mult">*</button>
+                            </div>
+                        </div>
+
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="equals">=</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="0">0</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="sqrt">&radic;</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" data-index="div">/</button>
                             </div>
                         </div>
                     </div>
