update style commit

--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
-<header>
-    <nav></nav>
-</header>
+<header></header>
 
 <main>
     <section id="generate">
